--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-  <!-- Calendly (for embedded widget) -->
-  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+  <!-- ✅ Booking URL used by script.js for all [data-book] buttons -->
+  <script>
+    window.BOOKING_URL = "https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01";
+  </script>
 </head>
 
 <body>
@@ -31,15 +33,14 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <a href="index.html" aria-label="Go to home">
-        <img src="logo2.png" alt="Acquisition Engine" class="logo" />
-      </a>
+      <img src="logo2.png" alt="Acquisition Engine" class="logo" />
 
       <nav class="nav">
-        <a href="results.html">Results</a>
+        <a href="#proof">Results</a>
         <a href="#how">How it works</a>
         <a href="#pricing">Pricing</a>
-        <a href="#book" class="btn-primary">Book a Call</a>
+        <a href="results.html">Results Page</a>
+        <a href="#book" class="btn-primary" data-book>Book a Call</a>
       </nav>
     </div>
   </header>
@@ -58,17 +59,19 @@
         </p>
 
         <div class="hero-cta">
-          <a href="#book" class="btn-primary large">Book a 15-minute call</a>
+          <a href="#book" class="btn-primary large" data-book>Book a 15-minute call</a>
           <a href="#how" class="btn-secondary">See the engine</a>
         </div>
 
-        <!-- HERO PROOF STRIP -->
-        <div class="proof-strip" aria-label="Recent client results screenshots">
-          <img src="proof1.png" alt="Client result screenshot 1" loading="lazy" decoding="async">
-          <img src="proof2.png" alt="Client result screenshot 2" loading="lazy" decoding="async">
-          <img src="proof3.png" alt="Client result screenshot 3" loading="lazy" decoding="async">
+        <!-- ✅ HERO PROOF (READABLE / CLEAN) -->
+        <div class="hero-proof" aria-label="Recent client results screenshots">
+          <div class="proof-strip">
+            <img class="proof-thumb" src="proof1.png" alt="Client result screenshot 1" loading="lazy" decoding="async">
+            <img class="proof-thumb" src="proof2.png" alt="Client result screenshot 2" loading="lazy" decoding="async">
+            <img class="proof-thumb" src="proof3.png" alt="Client result screenshot 3" loading="lazy" decoding="async">
+          </div>
+          <p class="proof-note">Real client messages • Unedited screenshots</p>
         </div>
-        <p class="proof-note">Real client messages • Unedited screenshots</p>
       </div>
 
       <!-- RIGHT -->
@@ -79,9 +82,9 @@
             <div class="kpi-top">
               <span class="kpi-icon">⚡</span>
               <span class="label">New Enquiries</span>
-              <span class="delta up" id="deltaEnq">+18%</span>
+              <span class="delta up" id="kpiDeltaEnq">+18%</span>
             </div>
-            <span class="value count" id="kpiEnquiries" data-count="38">0</span>
+            <span class="value count" id="kpiEnq" data-count="38">0</span>
           </div>
 
           <!-- KPI 2 -->
@@ -89,9 +92,9 @@
             <div class="kpi-top">
               <span class="kpi-icon">📅</span>
               <span class="label">Calls Booked</span>
-              <span class="delta up" id="deltaCalls">+9%</span>
+              <span class="delta up" id="kpiDeltaBooked">+9%</span>
             </div>
-            <span class="value count" id="kpiCalls" data-count="12">0</span>
+            <span class="value count" id="kpiBooked" data-count="12">0</span>
           </div>
 
           <!-- KPI 3 -->
@@ -99,9 +102,9 @@
             <div class="kpi-top">
               <span class="kpi-icon">✅</span>
               <span class="label">Deals Won</span>
-              <span class="delta flat" id="deltaWins">—</span>
+              <span class="delta flat" id="kpiDeltaWon">—</span>
             </div>
-            <span class="value count" id="kpiWins" data-count="5">0</span>
+            <span class="value count" id="kpiWon" data-count="5">0</span>
           </div>
 
           <!-- KPI 4 -->
@@ -109,31 +112,32 @@
             <div class="kpi-top">
               <span class="kpi-icon">💸</span>
               <span class="label">Revenue</span>
-              <span class="delta down" id="deltaRev">-4%</span>
+              <span class="delta down" id="kpiDeltaRev">-4%</span>
             </div>
-            <span class="value money count" id="kpiRevenue" data-count="48200">$0</span>
+            <span class="value money count" id="kpiRev" data-count="48200">$0</span>
           </div>
 
           <!-- Lead Trend chart -->
           <div class="chart-card">
             <div class="chart-header">
-              <h4 id="trendTitle">Enquiry Trend</h4>
+              <h4>Enquiry Trend</h4>
 
-              <!-- Industry Selector -->
-              <div class="seg" role="tablist" aria-label="Industry results selector">
-                <button class="seg-btn active" type="button" data-industry="all" aria-selected="true">All</button>
-                <button class="seg-btn" type="button" data-industry="tradies">Tradies</button>
-                <button class="seg-btn" type="button" data-industry="builders">Builders</button>
-                <button class="seg-btn" type="button" data-industry="insurance">Insurance</button>
-                <button class="seg-btn" type="button" data-industry="solar">Solar</button>
-                <button class="seg-btn" type="button" data-industry="agencies">Agencies</button>
+              <!-- ✅ Industry chips -->
+              <div class="chip-group" id="industryChips" aria-label="Industry filter">
+                <button class="chip-btn active" type="button" data-industry="all">All</button>
+                <button class="chip-btn" type="button" data-industry="tradies">Tradies</button>
+                <button class="chip-btn" type="button" data-industry="builders">Builders</button>
+                <button class="chip-btn" type="button" data-industry="insurance">Insurance</button>
+                <button class="chip-btn" type="button" data-industry="solar">Solar</button>
+                <button class="chip-btn" type="button" data-industry="agencies">Agencies</button>
               </div>
             </div>
+
             <div class="chart-subrow">
-              <span class="chip" id="trendMeta">7 days • Combined</span>
+              <span class="chip" id="chartMeta">7 days • All</span>
             </div>
 
-            <svg class="line-chart" viewBox="0 0 300 120" aria-label="Enquiry trend chart">
+            <svg class="line-chart" viewBox="0 0 300 120" aria-label="Trend chart">
               <defs>
                 <linearGradient id="lineGrad" x1="0" y1="0" x2="300" y2="0" gradientUnits="userSpaceOnUse">
                   <stop offset="0%" stop-color="#6A00FF"/>
@@ -150,21 +154,21 @@
                 </linearGradient>
 
                 <mask id="lineMask">
-                  <path id="trendLineMask"
+                  <path id="chartMaskPath"
                         d="M0 100 L40 80 L80 85 L120 60 L160 55 L200 70 L240 40 L280 30 L300 28"
                         stroke="white" stroke-width="6" fill="none"
                         stroke-linecap="round" stroke-linejoin="round"/>
                 </mask>
               </defs>
 
-              <path class="chart-area" id="trendArea"
+              <path class="chart-area" id="chartAreaPath"
                     d="M0 100 L40 80 L80 85 L120 60 L160 55 L200 70 L240 40 L280 30 L300 28 L300 120 L0 120 Z"/>
-              <path class="chart-line" id="trendLine"
+              <path class="chart-line" id="chartLinePath"
                     d="M0 100 L40 80 L80 85 L120 60 L160 55 L200 70 L240 40 L280 30 L300 28"/>
-              <path class="chart-shimmer" id="trendShimmer"
+              <path class="chart-shimmer" id="chartShimmerPath"
                     d="M0 100 L40 80 L80 85 L120 60 L160 55 L200 70 L240 40 L280 30 L300 28"
                     mask="url(#lineMask)"/>
-              <circle class="chart-dot" id="trendDot" r="4" cx="300" cy="28"/>
+              <circle class="chart-dot" id="chartDot" r="4" cx="300" cy="28"/>
             </svg>
           </div>
 
@@ -172,32 +176,32 @@
           <div class="widget funnel-widget">
             <div class="widget-head">
               <span class="widget-title">Pipeline</span>
-              <span class="widget-pill" id="pipeMeta">Today • Combined</span>
+              <span class="widget-pill" id="pipeMeta">Today • All</span>
             </div>
 
             <div class="funnel">
               <div class="frow">
                 <span>Enquiries</span>
-                <div class="bar"><div class="fill" id="fillEnq" style="--w: 100%"></div></div>
-                <strong id="fEnq">38</strong>
+                <div class="bar"><div class="fill" id="barEnq" style="--w: 100%"></div></div>
+                <strong id="pipeEnq">38</strong>
               </div>
 
               <div class="frow">
                 <span>Contacted</span>
-                <div class="bar"><div class="fill" id="fillCon" style="--w: 74%"></div></div>
-                <strong id="fCon">28</strong>
+                <div class="bar"><div class="fill" id="barContacted" style="--w: 74%"></div></div>
+                <strong id="pipeContacted">28</strong>
               </div>
 
               <div class="frow">
                 <span>Booked</span>
-                <div class="bar"><div class="fill" id="fillBoo" style="--w: 32%"></div></div>
-                <strong id="fBoo">12</strong>
+                <div class="bar"><div class="fill" id="barBooked" style="--w: 32%"></div></div>
+                <strong id="pipeBooked">12</strong>
               </div>
 
               <div class="frow">
                 <span>Won</span>
-                <div class="bar"><div class="fill" id="fillWon" style="--w: 13%"></div></div>
-                <strong id="fWon">5</strong>
+                <div class="bar"><div class="fill" id="barWon" style="--w: 13%"></div></div>
+                <strong id="pipeWon">5</strong>
               </div>
             </div>
           </div>
@@ -260,31 +264,38 @@
         </div>
       </div>
 
-      <!-- PROOF GRID (SECTION 2) -->
-      <div class="proof-grid reveal" aria-label="More proof screenshots">
-        <figure class="proof-card">
-          <img src="proof4.png" alt="Client result screenshot 4" loading="lazy" decoding="async">
-        </figure>
-        <figure class="proof-card">
-          <img src="proof5.png" alt="Client result screenshot 5" loading="lazy" decoding="async">
-        </figure>
-        <figure class="proof-card">
-          <img src="proof6.png" alt="Client result screenshot 6" loading="lazy" decoding="async">
-        </figure>
+      <!-- ✅ CLEAN: proof images are NOT scattered anymore -->
+      <div class="mini-note reveal">
+        Want to see real screenshots? Jump to the <a href="#gallery">Proof Gallery</a> or open the <a href="results.html">Results Page</a>.
+      </div>
+    </div>
+  </section>
+
+  <!-- ✅ PROOF GALLERY (ONE PROPER PLACE) -->
+  <section class="section section-proofwall" id="gallery" aria-label="Proof gallery">
+    <div class="container">
+      <div class="proofwall-head reveal">
+        <p class="kicker">Proof gallery</p>
+        <h2>Receipts — not “testimonials”.</h2>
+        <p class="sub">Unedited snapshots from real conversations and wins.</p>
+      </div>
+
+      <div class="proof-wall reveal">
+        <img src="proof4.png" alt="Client result screenshot 4" loading="lazy" decoding="async">
+        <img src="proof5.png" alt="Client result screenshot 5" loading="lazy" decoding="async">
+        <img src="proof6.png" alt="Client result screenshot 6" loading="lazy" decoding="async">
+        <img src="proof7.png" alt="Client result screenshot 7" loading="lazy" decoding="async">
+        <img src="proof8.png" alt="Client result screenshot 8" loading="lazy" decoding="async">
+        <img src="proof9.png" alt="Client result screenshot 9" loading="lazy" decoding="async">
+        <img src="proof10.png" alt="Client result screenshot 10" loading="lazy" decoding="async">
+        <img src="proof11.png" alt="Client result screenshot 11" loading="lazy" decoding="async">
+        <img src="proof12.png" alt="Client result screenshot 12" loading="lazy" decoding="async">
       </div>
     </div>
   </section>
 
   <!-- SECTION 3: How it works (Engine Map) -->
-  <section class="section section-engine has-floats" id="how">
-    <!-- scattered proof (hidden on mobile) -->
-    <div class="proof-float proof-float--a" aria-hidden="true">
-      <img src="proof8.png" alt="" loading="lazy" decoding="async">
-    </div>
-    <div class="proof-float proof-float--b" aria-hidden="true">
-      <img src="proof10.png" alt="" loading="lazy" decoding="async">
-    </div>
-
+  <section class="section section-engine" id="how">
     <div class="container engine">
       <div class="engine-left reveal">
         <p class="kicker">How it works</p>
@@ -425,20 +436,14 @@
   </section>
 
   <!-- SECTION 4: Before vs After (Autopilot) -->
-  <section class="section section-compare has-floats" id="results">
-    <!-- scattered proof (hidden on mobile) -->
-    <div class="proof-float proof-float--c" aria-hidden="true">
-      <img src="proof9.png" alt="" loading="lazy" decoding="async">
-    </div>
-
+  <section class="section section-compare" id="results">
     <div class="container compare">
       <div class="compare-head reveal">
         <p class="kicker">Before vs after</p>
         <h2>From chaos to autopilot.</h2>
         <p class="sub">
           Most businesses don’t lose because they’re bad — they lose because follow-up is inconsistent.
-          Acquisition Engine gives you <strong>the team, the playbook, and the daily execution</strong> to turn enquiries into booked calls
-          across trades, solar, agencies, and local services.
+          Acquisition Engine gives you <strong>the team, the playbook, and the daily execution</strong> to turn enquiries into booked calls.
         </p>
       </div>
 
@@ -526,7 +531,7 @@
             </div>
 
             <div class="auto-cta">
-              <a class="btn-primary large" href="#book">Book a 15-minute call</a>
+              <a class="btn-primary large" href="#book" data-book>Book a 15-minute call</a>
               <a class="btn-secondary" href="#pricing">See pricing</a>
             </div>
           </div>
@@ -575,33 +580,8 @@
     </div>
   </section>
 
-  <!-- PROOF WALL (BEFORE PRICING) -->
-  <section class="section section-proofwall" aria-label="Proof wall">
-    <div class="container">
-      <div class="proofwall-head reveal">
-        <p class="kicker">More proof</p>
-        <h2>Not testimonials — receipts.</h2>
-        <p class="sub">A few unedited snapshots from real conversations and wins.</p>
-      </div>
-
-      <div class="proof-wall reveal">
-        <img src="proof7.png" alt="Client result screenshot 7" loading="lazy" decoding="async">
-        <img src="proof8.png" alt="Client result screenshot 8" loading="lazy" decoding="async">
-        <img src="proof9.png" alt="Client result screenshot 9" loading="lazy" decoding="async">
-        <img src="proof10.png" alt="Client result screenshot 10" loading="lazy" decoding="async">
-        <img src="proof11.png" alt="Client result screenshot 11" loading="lazy" decoding="async">
-        <img src="proof12.png" alt="Client result screenshot 12" loading="lazy" decoding="async">
-      </div>
-    </div>
-  </section>
-
   <!-- SECTION 5: Pricing + Guarantee -->
-  <section class="section section-pricing has-floats" id="pricing">
-    <!-- scattered proof (hidden on mobile) -->
-    <div class="proof-float proof-float--d" aria-hidden="true">
-      <img src="proof11.png" alt="" loading="lazy" decoding="async">
-    </div>
-
+  <section class="section section-pricing" id="pricing">
     <div class="container">
       <div class="pricing-head reveal">
         <p class="kicker">Pricing & guarantee</p>
@@ -638,7 +618,7 @@
           </ul>
 
           <div class="pricing-cta">
-            <a href="#book" class="btn-primary large">Book a 15-minute call</a>
+            <a href="#book" class="btn-primary large" data-book>Book a 15-minute call</a>
             <span class="pricing-note">If you don’t win work, we don’t get paid.</span>
           </div>
         </article>
@@ -676,24 +656,19 @@
     </div>
   </section>
 
-  <!-- BOOKING (Calendly Embed) -->
+  <!-- ✅ BOOK SECTION (Calendly embed) -->
   <section class="section section-book" id="book" aria-label="Book a call">
     <div class="container">
       <div class="book-head reveal">
         <p class="kicker">Book a call</p>
-        <h2>Let’s map your next 30 days of wins.</h2>
-        <p class="sub">
-          Pick a time that works — we’ll look at your current lead flow, your follow-up, and where the leaks are.
-        </p>
+        <h2>Let’s map out your next 30 days of growth.</h2>
+        <p class="sub">Pick a time that suits you — we’ll show you exactly what we’d install and how we’ll track ROI.</p>
       </div>
 
-      <div class="book-card reveal">
-        <div
-          class="calendly-inline-widget"
-          id="calendlyWidget"
-          data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
-          style="min-width:320px;height:780px;"
-        ></div>
+      <div class="cal-wrap reveal">
+        <div class="calendly-inline-widget"
+             data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
+             style="min-width:320px;height:760px;"></div>
       </div>
     </div>
   </section>
@@ -712,14 +687,14 @@
         </div>
 
         <div class="final-actions">
-          <a href="#book" class="btn-primary large">Book a 15-minute call</a>
+          <a href="#book" class="btn-primary large" data-book>Book a 15-minute call</a>
           <p class="tiny-note">If you don’t win work, we don’t get paid.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- FOOTER (FULL) -->
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
       <div class="footer-grid">
@@ -737,18 +712,19 @@
 
         <div class="footer-col">
           <h4>Product</h4>
-          <a href="results.html">Results</a>
           <a href="#how">How it works</a>
+          <a href="#results">Results</a>
           <a href="#pricing">Pricing</a>
-          <a href="#book">Book a call</a>
+          <a href="results.html">Results Page</a>
+          <a href="#book" data-book>Book a call</a>
         </div>
 
         <div class="footer-col">
           <h4>Company</h4>
           <a href="#top">Home</a>
           <a href="#proof">Why us</a>
-          <a href="#book">Contact</a>
-          <a href="#book">Support</a>
+          <a href="#gallery">Proof Gallery</a>
+          <a href="#book" data-book>Contact</a>
         </div>
 
         <div class="footer-col">
@@ -784,9 +760,7 @@
     </div>
   </div>
 
-  <!-- Calendly script (must be on the page for inline widget) -->
   <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-
   <script src="script.js"></script>
 </body>
 </html>
