--- a/index.html
+++ b/index.html
@@ -137,16 +137,20 @@
           <div class="chart-card">
             <div class="chart-header">
               <div class="chart-left">
-                <h4>Enquiry Trend</h4>
-
-                <div class="seg" role="tablist" aria-label="Industry filter">
-                  <button class="seg-btn active" type="button" data-industry="all" role="tab" aria-selected="true">All</button>
-                  <button class="seg-btn" type="button" data-industry="tradies" role="tab">Tradies</button>
-                  <button class="seg-btn" type="button" data-industry="builders" role="tab">Builders</button>
-                  <button class="seg-btn" type="button" data-industry="insurance" role="tab">Insurance</button>
-                  <button class="seg-btn" type="button" data-industry="solar" role="tab">Solar</button>
-                  <button class="seg-btn" type="button" data-industry="agencies" role="tab">Agencies</button>
+                <div class="chart-header">
+                  <h4>Enquiry Trend</h4>
+                  <span class="chip" id="chartRangeLabel">7 days • All</span>
                 </div>
+                
+                <div class="chart-controls" id="industryControls" aria-label="Industry filters">
+                <button class="seg active" type="button" data-industry="all">All</button>
+                <button class="seg" type="button" data-industry="tradies">Tradies</button>
+                <button class="seg" type="button" data-industry="builders">Builders</button>
+                <button class="seg" type="button" data-industry="insurance">Insurance</button>
+                <button class="seg" type="button" data-industry="solar">Solar</button>
+                <button class="seg" type="button" data-industry="agencies">Agencies</button>
+              </div>
+
               </div>
 
               <div class="chart-right">
@@ -629,4 +633,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
