--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ONIX — Your pipeline, on autopilot.</title>
   <meta name="description" content="ONIX: Done-for-you acquisition + follow-up system. Book more calls with a Stripe-level, premium pipeline engine." />
-  <link rel="icon" href="./assets/logo2.png" />
+  <link rel="icon" href="./logo2.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -581,7 +581,7 @@
     <div class="container footer-grid">
       <div class="foot-col">
         <div class="foot-brand">
-          <img src="./assets/logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
+          <img src="./logo2.png" alt="ONIX logo" onerror="this.style.display='none'" />
           <div>
             <div class="foot-name">ONIX</div>
             <div class="foot-tag">Marketing • 1–1 acquisition + follow-up system</div>
@@ -634,4 +634,5 @@
 <!-- =========================
      END: index.html
 ========================= -->
+
 
